Fix Post-actions being on top of Post Controls Dropdown
- This was accidentially introduced when an explicit z-index was added to reply-actions to prevent Post-footer from covering it
- Here, we revert that zindex, while making Post-footer inline-block to stop it from covering everything. We also set height=0 to stop implicitly added height

--- a/framework/core/less/forum/Post.less
+++ b/framework/core/less/forum/Post.less
@@ -271,6 +271,8 @@
   }
 }
 .Post-footer {
+  display: inline-block;
+  height: 0;
   margin-top: 5px;
   margin-bottom: 20px;
 
@@ -288,7 +290,6 @@
   margin-top: -5px;
   float: right;
   position: relative;
-  z-index: 1;
 
   .transition(opacity 0.2s);
 
